# mini-react-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mini_agent/: __init__.py  __main__.py  agent.py  cli.py  demo.py  llms.py  prompt.py  tools.py  trace.py  web.py
mini_agent/data/: demo_script.json
tests/: test_agent.py  test_parser.py  test_tools.py  test_trace.py
